[project]
name = "cog-types"
description = "Types used by replicate/cog and anything else that seeks to be compatible with replicate/cog."
readme = "README.md"
dynamic = ["version"]
authors = [{ name = "Replicate", email = "team@replicate.com" }]
license.file = "LICENSE"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=1.9,<3",
    "requests>=2,<3",
]

[project.optional-dependencies]
dev = [
    "build",
    "setuptools_scm",
    "tox",
    "tox-uv",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "pytest-xdist",
    "responses",
]

[tool.setuptools_scm]
write_to = "src/cog_types/_version.py"

[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"
